<resources>
    <string name="app_scheme" translatable="false">rollic</string>
    <string name="redirectUrl" translatable="false">https://yoo_money_invoice.ym/return</string>
    <string name="baseUrl" translatable="false">https://sr.rollic.ru/api/payments/</string>

    <string name="testAccessToken" translatable="false">m6B?3Kwg4dX5rPv3B18d?qTEXz5ao8ZTURIGh6/lg-lyNsVN=PWZ5FQzyAI73J8b</string>
    <string name="liveAccessToken" translatable="false">-R2Tx-RLOKEnJx1-hcCyS35Dqtj8f6kFrwGtBW-H1=3!5oM/T-p2HhK4T/vtyOJC</string>

    <string name="client_id" translatable="false">v1j97m5mmfij22kmerocs8ah3cv3kt05</string>

    <!--    test keys    -->
    <!--    <string name="shopId">257888</string>-->
    <!--    <string name="client_key">test_MjU3ODg4xpKXX3WNRh1OHyR_hKNbB8cC6F2kqXRvVhw</string>-->

    <!--    live keys    -->
    <string name="shopId" translatable="false">250021</string>
    <string name="client_key" translatable="false">live_MjUwMDIx65a3FhMyJYmfuZ9BHJS7yvmdbzrTFFfkMe0</string>

    <string name="app_name" translatable="false">Rollic</string>
    <string name="hello_blank_fragment">Functionality in development</string>
    <string name="subscribers_str">%s\nSubscribers</string>
    <string name="subscriptions_str">%s\nSubscriptions</string>
    <string name="posts_str">%s\nPosts</string>
    <string name="name_not_entered_str">Name not set</string>
    <string name="nicknameofuser_str" translatable="false">\@%s</string>
    <string name="subscribe_str">  Subscribe  </string>
    <string name="bio_example_str">This Huge Huge Huge Huge Huge Huge Description - Profile Bio.</string>
    <string name="my_posts_str">Posts</string>
    <string name="liked_str">🔒Liked</string>
    <string name="in_dev_str">In development</string>
    <string name="welcome_text">Welcome to the new photo and video social network Rollic!</string>
    <string name="describe_welcome_text">You can fill in additional information about yourself or do it later in your profile settings.</string>
    <string name="avatar_upload_str">Upload an avatar</string>
    <string name="name_of_profile_str">Profile name</string>
    <string name="dog_simbol_str" translatable="false">\@</string>
    <string name="your_nickname_str">Your nickname (short name)</string>
    <string name="skip_str">Skip</string>
    <string name="save_continue_str">Save and continue</string>
    <string name="photo_post_str">Photo post</string>
    <string name="text_post_str">Text post</string>
    <string name="rollic_str">Logo Rollic</string>
    <string name="log_in_app_str">Login to the Rollic App</string>
    <string name="email_str" translatable="false">Email</string>
    <string name="phone_str">Phone</string>
    <string name="other_login_option_str">Or use other login methods</string>
    <string name="google_str">Google login</string>
    <string name="end_posts_str">That\'s all for now. Add your post to complete the feed :)</string>
    <string name="subscribers_text">Subscribers</string>
    <string name="home_screen_str">Home screen</string>
    <string name="video_screen_str">Videos feed</string>
    <string name="store_screen_str">Store</string>
    <string name="account_screen_str">Account</string>
    <string name="add_post_screen_str">Add post</string>
    <string name="enter_email_str">Enter your email</string>
    <string name="pass_str">Create a password</string>
    <string name="hint_pass_str">Password must be more than 6 characters</string>
    <string name="login_button_str">Log in / Register</string>
    <string name="enter_phone_str">Enter phone number</string>
    <string name="start_phone_text" translatable="false">+7</string>
    <string name="code_str">Code</string>
    <string name="send_code_str">Send code</string>
    <string name="confirm_str">Confirm</string>
    <string name="resend_str">Resend</string>
    <string name="add_main_pic_str">Add a main photo</string>
    <string name="main_pic_str">Main photo</string>
    <string name="upload_add_pic_str">You can upload additional photo</string>
    <string name="additional_pic_str">Additional photos</string>
    <string name="fun_noavaibaile_str">Function not available</string>
    <string name="add_description_str">Add a description</string>
    <string name="add_tags_str">Specify tags by separating each #</string>
    <string name="tags_example_text">#new #rollic #❤</string>
    <string name="cancel_str">Cancel</string>
    <string name="publish_str">Publish</string>
    <string name="add_title_str">Add a title</string>
    <string name="example_text">Hello, world!</string>
    <string name="post_pic_str">Post picture</string>
    <string name="notifications_str">Notifications</string>
    <string name="messages_str">Messages</string>
    <string name="user_name_str" translatable="false">User name</string>
    <string name="button_subscribe_str">Subscribe button</string>
    <string name="example_25k_str" translatable="false">25К</string>
    <string name="example_10k_str" translatable="false">10К</string>
    <string name="example_3_3k_str" translatable="false">3,3К</string>
    <string name="button_dislike_str">Hide post button</string>
    <string name="sms_hint_str">SMS usually arrives in 1–3 minutes</string>
    <string name="unsubscribe_str">"  Unsubscribe  "</string>
    <string name="error_email_auth_str">All data must be entered</string>
    <string name="check_data_auth_str">Check the correctness of the data</string>
    <string name="register_text">Registration</string>
    <string name="error_register_str">Registration error. Try again later or contact support</string>
    <string name="too_many_requests_auth_str">Too many tries. Try later please</string>
    <string name="recaptcha_error_str">Recaptcha user validation error</string>
    <string name="enter_valid_phone_str">ENTER CORRECT NUMBER</string>
    <string name="title_post_gallery_str" translatable="false">«%s»</string>
    <string name="image_requared_str">Image must be added</string>
    <string name="rollic_ad_text">Rollic © Ad</string>
    <string name="no_gallery_apps_found_on_this_device">No gallery apps found on this device</string>
    <string name="loviagin_corporation" translatable="false">Loviagin Corporation</string>
    <string name="ilia_loviagin" translatable="false">Ilia Loviagin</string>
    <string name="www_ilia_loviagin_com" translatable="false">www.ilia.loviagin.com</string>
    <string name="www_loviagin_com" translatable="false">www.loviagin.com</string>
    <string name="apply_str">Apply</string>
    <string name="change_lang_str">Change language</string>
    <string name="delete_account_str">Delete account</string>
    <string name="about_app_str">About</string>
    <string name="settings_str">Settings</string>
    <string name="logout_str">Log out</string>
    <string name="edit_profile_str">Edit profile</string>
    <string name="save_str">Save</string>
    <string name="video_str">Video</string>
    <string name="paid_str_u">Paid posts</string>
    <string-array name="languages_array" translatable="false">
        <item>English</item>
        <item>Русский</item>
    </string-array>
</resources>