<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:background="@color/white"
    app:cardCornerRadius="15dp"
    app:strokeColor="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivAvatarRegister"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:padding="1dp"
                android:scaleType="centerInside"
                app:shapeAppearanceOverlay="@style/ImageCircle"
                app:srcCompat="@drawable/fav"
                app:strokeColor="@color/blue50"
                app:strokeWidth="3dp" />

            <LinearLayout
                android:id="@+id/llPostMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvNamePost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name_str" />

                <TextView
                    android:id="@+id/tvNicknamePost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/nicknameofuser_str" />
            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/bSubscribePost"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:background="@color/transparent"
                android:clickable="false"
                app:srcCompat="@drawable/fi_rr_user_add"
                android:contentDescription="@string/button_subscribe_str" />
        </LinearLayout>

        <ImageView
            android:id="@+id/ivPhoto1Post"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="10dp"
            android:background="@color/white"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/add"
            android:contentDescription="@string/main_pic_str" />

        <TextView
            android:id="@+id/tvTitlePost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/add_title_str"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvDescriptionPost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_description_str" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bLikePost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/blue50"
                android:paddingHorizontal="3dp"
                android:text="@string/example_25k_str"
                app:icon="@drawable/fi_rr_like"
                app:iconGravity="textStart"
                app:iconPadding="10dp" />

            <Button
                android:id="@+id/bCommentPost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue50"
                android:paddingHorizontal="3dp"
                android:text="@string/example_10k_str"
                app:icon="@drawable/fi_rr_messages"
                app:iconGravity="textStart"
                app:iconPadding="10dp" />

            <Button
                android:id="@+id/bRepost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/blue50"
                android:paddingHorizontal="3dp"
                android:text="@string/example_3_3k_str"
                app:icon="@drawable/fi_rr_repost"
                app:iconGravity="textStart"
                app:iconPadding="10dp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10" />

            <ImageButton
                android:id="@+id/bDislikePost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:clickable="false"
                app:srcCompat="@drawable/fi_rr_dislike"
                android:contentDescription="@string/button_dislike_str" />
        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>