<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="15dp"
    app:strokeColor="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/bNotifications"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="2dp"
            android:background="@color/transparent"
            app:srcCompat="@drawable/fi_rr_bell"
            android:contentDescription="@string/notifications_str" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:layout_weight="10"
            app:srcCompat="@drawable/logo"
            android:contentDescription="@string/rollic_str" />

        <ImageButton
            android:id="@+id/bMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            app:srcCompat="@drawable/fi_rr_messages"
            android:contentDescription="@string/messages_str" />
    </LinearLayout>
</androidx.cardview.widget.CardView>