<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="horizontal">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivAvatarRegister"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical"
        android:padding="1dp"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/ImageCircle"
        app:srcCompat="@drawable/fav"
        app:strokeColor="@color/blue50"
        app:strokeWidth="3dp" />

    <LinearLayout
        android:id="@+id/llPostMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvNamePost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name_str" />

        <TextView
            android:id="@+id/tvNicknamePost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/nicknameofuser_str" />
    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <ImageButton
        android:id="@+id/bSubscribePost"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|end"
        android:background="@color/transparent"
        android:clickable="false"
        android:contentDescription="@string/button_subscribe_str"
        app:srcCompat="@drawable/fi_rr_user_add" />

</LinearLayout>