<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginBottom="1dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="@id/bAdd"
        app:layout_constraintEnd_toStartOf="@id/bAdd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/bAdd"
        app:strokeColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageButton
                android:id="@+id/bHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/white"
                app:srcCompat="@drawable/fi_rr_home"
                android:contentDescription="@string/home_screen_str" />

            <ImageButton
                android:id="@+id/bSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/white"
                app:srcCompat="@drawable/fi_rr_search"
                android:contentDescription="Search screen" />

            <ImageButton
                android:id="@+id/bVideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/white"
                app:srcCompat="@drawable/fi_rr_play"
                android:contentDescription="@string/video_screen_str" />

            <ImageButton
                android:id="@+id/bStore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/white"
                android:visibility="gone"
                app:srcCompat="@drawable/fi_rr_shop"
                android:contentDescription="@string/store_screen_str" />

            <ImageButton
                android:id="@+id/bAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/white"
                android:cropToPadding="false"
                app:srcCompat="@drawable/fi_rr_user"
                android:contentDescription="@string/account_screen_str" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginBottom="5dp"
        android:clickable="true"
        android:focusable="true"
        app:fabCustomSize="44dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:srcCompat="@drawable/fi_rr_plus"
        android:contentDescription="@string/add_post_screen_str" />

</androidx.constraintlayout.widget.ConstraintLayout>

